--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -2,6 +2,7 @@ entity:
     Cart: Cart|Carts
     ProductCategory: Categorie|Categories
     Product: Product|Products
+    ProductImage: Images|Images
     CartStatus: Status|Statuses
 
 # cart admin
