--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -2,6 +2,7 @@ entity:
     Cart: Cart|Carts
     ProductCategory: Catégorie|Catégories
     Product: Produit|Produits
+    ProductImage: Images|Images
     CartStatus: Status|Statuses
 
 # cart admin
